samples/_failures_safe/1761075547_ab4d3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afaecf37.c: In function ‘main’:
./samples/SAFE/__tmp_afaecf37.c:176: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_afaecf37.c:175:5: error: expected declaration or statement at end of input
  175 |     while
      |     ^~~~~
